--- a/.github/workflows/deploy-to-github-releases.yml
+++ b/.github/workflows/deploy-to-github-releases.yml
@@ -1,4 +1,4 @@
-name: Maven Deploy
+name: Maven Deploy to GitHub Releases
 
 on:
   workflow_dispatch:
@@ -16,9 +16,17 @@ jobs:
             exit 1
           fi
 
-      # Checkout the repository
+      - name: Generate GitHub App Token
+        id: generate-token
+        uses: tibdex/github-app-token@v1
+        with:
+          app_id: ${{ secrets.APP_ID }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
+
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          token: ${{ steps.generate-token.outputs.token }}
 
       # Set up Java
       - name: Set up JDK
@@ -34,8 +42,8 @@ jobs:
                   <servers>
                       <server>
                           <id>github</id>
-                          <username>${{ secrets.GITHUB_USERNAME }}</username>
-                          <password>${{ secrets.GITHUB_PAT }}</password>
+                          <username>${{ secrets.APP_ID }}</username>
+                          <password>${{ steps.generate-token.outputs.token }}</password>
                       </server>
                   </servers>
               </settings>" > settings-deploy.xml
