--- a/.github/workflows/deploy-to-github-releases.yml
+++ b/.github/workflows/deploy-to-github-releases.yml
@@ -6,7 +6,6 @@ on:
       branch:
         required: true
         type: string
-        default: 'main'
       repo_name:
         required: true
         type: string
@@ -82,6 +81,13 @@ jobs:
                 </activeProfiles>
               </settings>" > settings-deploy.xml
 
+      - name: Debug token access
+        run: |
+          curl -H "Authorization: Bearer ${{ steps.generate-token.outputs.token }}" \
+               -H "Accept: application/vnd.github+json" \
+               https://api.github.com/user/installations
+      
+
       # Run Maven deploy
       - name: Deploy with Maven
-        run: mvn deploy -s settings-deploy.xml -f pom.xml
+        run: mvn deploy -s settings-deploy.xml -X -f pom.xml
