Add debug tools

--- a/.github/workflows/deploy-to-github-releases.yml
+++ b/.github/workflows/deploy-to-github-releases.yml
@@ -38,6 +38,7 @@ jobs:
         with:
           app_id: ${{ secrets.APP_ID }}
           private_key: ${{ secrets.PRIVATE_KEY }}
+          repository: 'evildevsmk/${{ inputs.repo_name }}'
 
       - name: Checkout code
         uses: actions/checkout@v3
