--- a/.github/workflows/deploy-to-github-releases.yml
+++ b/.github/workflows/deploy-to-github-releases.yml
@@ -1,7 +1,7 @@
 name: Maven Deploy to GitHub Releases
 
 on:
-  workflow_call: # Add this to make the workflow reusable
+  workflow_call:
     inputs:
       branch:
         required: true
@@ -9,6 +9,10 @@ on:
       repo_name:
         required: true
         type: string
+      token:
+        required: true
+        type: string
+
 
 jobs:
   deploy:
@@ -32,18 +36,10 @@ jobs:
             exit 1
           fi
 
-      - name: Generate GitHub App Token
-        id: generate-token
-        uses: tibdex/github-app-token@v1
-        with:
-          app_id: ${{ secrets.APP_ID }}
-          private_key: ${{ secrets.PRIVATE_KEY }}
-          repository: 'evildevsmk/${{ inputs.repo_name }}'
-
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          token: ${{ steps.generate-token.outputs.token }}
+          token: ${{ inputs.token }}
 
       # Set up Java
       - name: Set up JDK
@@ -60,7 +56,7 @@ jobs:
                       <server>
                           <id>github</id>
                           <username>${{ secrets.APP_ID }}</username>
-                          <password>${{ steps.generate-token.outputs.token }}</password>
+                          <password>${{ inputs.token }}</password>
                       </server>
                   </servers>
                   <profiles>
