--- a/.github/workflows/deploy-to-github-releases.yml
+++ b/.github/workflows/deploy-to-github-releases.yml
@@ -43,7 +43,7 @@ jobs:
           GITHUB_USERNAME: ${{ secrets.BOT_USERNAME }}
           GITHUB_PAT: ${{ secrets.BOT_PAT }}
         run: |
-          cat > ${{ github.workspace }}/settings.xml <<EOF
+          cat > ${{ github.workspace }}/settings.xml <<EOF_
           <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 https://maven.apache.org/xsd/settings-1.0.0.xsd">
@@ -72,7 +72,7 @@ jobs:
               <activeProfile>github</activeProfile>
             </activeProfiles>
           </settings>
-          EOF
+          EOF_
 
       - name: Deploy with Maven
         run: mvn deploy -s ${{ github.workspace }}/settings.xml -f pom.xml -Pgithub
