Add secrets for BOT_USERNAME and BOT_PAT to GitHub Releases workflow

--- a/.github/workflows/deploy-to-github-releases.yml
+++ b/.github/workflows/deploy-to-github-releases.yml
@@ -2,6 +2,9 @@ name: Maven Deploy to GitHub Releases
 
 on:
   workflow_call:
+    secrets:
+      BOT_USERNAME: ${{ secrets.BOT_USERNAME }}
+      BOT_PAT: ${{ secrets.BOT_PAT }}
     inputs:
       branch:
         required: true
