--- a/.github/workflows/deploy-to-github-releases.yml
+++ b/.github/workflows/deploy-to-github-releases.yml
@@ -51,8 +51,8 @@ jobs:
             <servers>
               <server>
                 <id>github</id>
-                <username>${{ env.GITHUB_USERNAME }}</username>
-                <password>${{ env.GITHUB_PAT }}</password>
+                <username>vojislavStanojevikj</username>
+                <password>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</password>
               </server>
             </servers>
             <profiles>
